--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
 </head>
 <body>
     <div class="game-container">
+        <h1>Matching Animal Pair Game</h1>
         <div class="scoreboard">
-            <div>Team 1: <span id="team1Score">0</span></div>
-            <div>Team 2: <span id="team2Score">0</span></div>
-            <div>Current Turn: <span id="currentTurn">Team 1</span></div>
+            <div class="team" id="team1">
+                <h2>Team 1: <span id="score1">0</span></h2>
+            </div>
+            <div class="team" id="team2">
+                <h2>Team 2: <span id="score2">0</span></h2>
+            </div>
         </div>
-        <div class="game-board" id="gameBoard"></div>
+        <div class="turn-indicator">
+            Current Turn: <span id="currentTeam">Team 1</span>
+        </div>
+        <div class="grid" id="gameGrid"></div>
     </div>
     <script src="script.js"></script>
 </body>
