--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,13 +9,13 @@
 <body>
     <div class="game-container">
         <h1>Matching Animal Pair Game</h1>
-        <div class="scoreboard">
-            <div class="team" id="team1">
-                <h2>Team 1: <span id="score1">0</span></h2>
-            </div>
-            <div class="team" id="team2">
-                <h2>Team 2: <span id="score2">0</span></h2>
-            </div>
+        <div class="team-selection">
+            <button onclick="startGame(2)">2 Teams</button>
+            <button onclick="startGame(3)">3 Teams</button>
+            <button onclick="startGame(4)">4 Teams</button>
+        </div>
+        <div class="scoreboard" id="scoreboard">
+            <!-- Dynamic scoreboard based on team selection -->
         </div>
         <div class="turn-indicator">
             Current Turn: <span id="currentTeam">Team 1</span>
@@ -26,3 +25,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
