--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matching Animal Pair Game</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Matching Animal Pair Game</h1>
-    <div id="scoreboard">
-        <div>Team 1 Score: <span id="score1">0</span></div>
-        <div>Team 2 Score: <span id="score2">0</span></div>
-        <div>Current Turn: <span id="turn">Team 1</span></div>
+    <div id="controls">
+        <label for="teamCount">Choose number of teams:</label>
+        <select id="teamCount">
+            <option value="2">2 Teams</option>
+            <option value="3">3 Teams</option>
+            <option value="4">4 Teams</option>
+        </select>
     </div>
+    <div id="scoreboard" class="team-info"></div>
     <div id="gameBoard" class="grid"></div>
     <script src="script.js"></script>
 </body>
