--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <option value="4">4 Teams</option>
         </select>
     </div>
-    <div id="scoreboard" class="team-info"></div>
+    <div id="scoreboard"></div>
     <div id="gameBoard" class="grid"></div>
     <script src="script.js"></script>
 </body>
