--- a/MatchingAnimalPairGame.html
+++ b/MatchingAnimalPairGame.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matching Animal Pair Game</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Matching Animal Pair Game</h1>
-    <div id="scoreboard">
-        <div>Team 1 Score: <span id="score1">0</span></div>
-        <div>Team 2 Score: <span id="score2">0</span></div>
-        <div>Current Turn: <span id="turn">Team 1</span></div>
-    </div>
     <div id="gameBoard" class="grid"></div>
+    <div id="sidebar" style="position: absolute; right: 0; top: 0; padding: 20px;">
+        <div id="controls">
+            <label for="teamCount">Choose number of teams:</label>
+            <select id="teamCount">
+                <option value="2">2 Teams</option>
+                <option value="3">3 Teams</option>
+                <option value="4">4 Teams</option>
+            </select>
+        </div>
+        <div id="scoreboard"></div>
+        <div id="turnIndicator">Next turn: Team 1</div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
