--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="gameBoard" class="grid"></div>
-    <div id="sidebar" style="position: absolute; right: 0; top: 0; padding: 20px;">
+    <div id="sidebar">
         <div id="controls">
             <label for="teamCount">Choose number of teams:</label>
             <select id="teamCount">
